doc/ingress-sdp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-server
  namespace: services-surfconext-poc
  annotations: 
    cert-manager.io/cluster-issuer: sdp-harica-dns
spec:
  ingressClassName: kong
  rules:
  - host: oauth2-server.dev.sdp.surf.nl
    http:
      paths:
      - backend:
          service:
            name: oauth2-server
            port:
              number: 8080
        path: /
        pathType: Prefix
